packages/graphql/tests/snapshots/integrations_tests____test_context_wrapped_test_bid_mutation.snap
---
source: packages/graphql/tests/integrations_tests.rs
expression: response
---
{
  "data": {
    "bid": {
      "bid": {
        "id": "[uuid]",
        "auctionId": "00000000-0000-0000-0000-000000000000",
        "buyerId": "00000000-2000-0000-0000-000000000000",
        "amount": "500"
      }
    }
  }
}
