packages/graphql/tests/snapshots/integrations_tests____test_context_wrapped_test_comment_mutation.snap
---
source: packages/graphql/tests/integrations_tests.rs
expression: response
---
{
  "data": {
    "comment": {
      "comment": {
        "id": "[uuid]",
        "authorId": "00000000-2000-0000-0000-000000000000",
        "showId": "00000000-0000-0000-0000-000000000000",
        "text": "This is a comment"
      }
    }
  }
}
