packages/graphql/tests/snapshots/integrations_tests____test_context_wrapped_test_start_mutation.snap
---
source: packages/graphql/tests/integrations_tests.rs
expression: response
---
{
  "data": {
    "start": {
      "auction": {
        "id": "[uuid]",
        "startedAt": "[timestamptz]"
      }
    }
  }
}
